--- a/index.css
+++ b/index.css
@@ -174,6 +174,7 @@ section.listings h2 {
     border: none;
     border-radius: 5px;
     font-size: 1rem;
+    cursor: pointer;
 }
 
 .listings__filter-clearBtn {
@@ -191,6 +192,11 @@ section.listings h2 {
 .listing {
     width: 14rem;
     margin-bottom: 1.69rem;
+}
+
+.listing__link {
+    text-decoration: none;
+    color: #161616;
 }
 
 .listing__image {
@@ -222,6 +228,7 @@ section.listings h2 {
     margin-right: auto;
     margin-top: 0.5rem;
     color: #FFEAD0;
+    font-weight: 600;
 }
 
 .listing__type--simple {
